# cpp-sift

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  README.md
data/: data_preprocessed.csv
src/: #test1.cpp#  .#test1.cpp  CMakeLists.txt  GHelper.cpp  GHelper.h  capture  capture.cpp  coordinates_transformations  coordinates_transformations.cpp  coordinates_transformations.cpp~  csvtest  csvtest.cpp  csvtest.cpp~  cvstest  estimate_kalman  estimate_kalman.cpp  estimate_kalman.cpp~  estimate_kalman_new  estimate_kalman_prev_main.cpp  harris  harris.cpp  harris.cpp~  makefile  makefile~  rebuild.sh  relocalize  relocalize.cpp  relocalize.h  relocalize_example  relocalize_example.cpp  relocalize_inflight  relocalize_inflight.cpp  relocalize_measurement  relocalize_measurements.cpp  temp.cpp  test1  test1.cpp  test1.cpp~
